# HeidelbergMotifClustering

./: .gitignore  .gitmodules  README.md  build_all.sh  run_sample.sh
LMCHGP/: CMakeLists.txt  compile.sh
LMCHGP/app/: evaluator.cpp  motif_clustering_graph.cpp
LMCHGP/lib/: definitions.h
LMCHGP/lib/algorithms/: bfs_depth.cpp  strongly_connected_components.cpp  strongly_connected_components.h
LMCHGP/lib/data_structure/: graph_access.h  graph_hierarchy.h
LMCHGP/lib/ilp_improve/: ilp_improve.h
LMCHGP/lib/io/: graph_io.h  mmap_graph_io.h
LMCHGP/lib/mapping/: communication_graph_search_space.cpp  construct_distance_matrix.cpp  full_search_space.cpp
LMCHGP/lib/node_ordering/: min_degree_ordering.h  ordering_tools.h  reductions.h
LMCHGP/lib/parallel_mh/: population.cpp
LMCHGP/lib/partition/: partition_config.h
LMCHGP/lib/spac/: spac.cpp
LMCHGP/lib/tools/: macros_assertions.h  misc.h  mpi_tools.h  partition_snapshooter.cpp  timer.h
SOCIAL/app/: configuration.h  parse_parameters.h  spac.cpp
SOCIAL/lib/: definitions.h
SOCIAL/lib/algorithms/: bfs_depth.cpp  bfs_depth.h  cycle_search.h  mqi.cpp  push_relabel.cpp  push_relabel.h  topological_sort.cpp  topological_sort.h  triangle_listing.h
SOCIAL/lib/data_structure/: graph_access.h
SOCIAL/lib/ilp_improve/: ilp_exact.h  ilp_helpers.h  ilp_improve.h
SOCIAL/lib/io/: graph_io.cpp
SOCIAL/lib/mapping/: communication_graph_search_space.cpp  construct_mapping.cpp  fast_construct_mapping.h  full_search_space.h  full_search_space_pruned.cpp  (+2 more)
algorithms/: compile.sh
algorithms/app/: configuration.h
experimental_data/Faster Local Motif Clustering via Maximum Flows/: README.md  build_all.sh  clean_all.sh  run_sample.sh
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/: README.md  build_all.sh  clean_all.sh
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/: CMakeLists.txt  LICENSE  compile.sh
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/app/: balance_configuration.h  parse_spac_parameters.h
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/algorithms/: topological_sort.cpp  topological_sort.h  triangle_listing.h
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/data_structure/: graph_access.h  union_find.h
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/data_structure/priority_queues/: priority_queue_interface.h
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/ilp_improve/: ilp_helpers.h
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/mapping/: communication_graph_search_space.h  full_search_space_pruned.cpp  mapping_algorithms.cpp
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/parallel_mh/exchange/: exchanger.h
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/parallel_mh/galinier_combine/: gal_combine.h
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/partition/coarsening/: contraction.cpp  contraction.h
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/partition/coarsening/edge_rating/: edge_ratings.cpp
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/partition/coarsening/matching/: matching.cpp  matching.h
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/partition/coarsening/matching/gpa/: path_set.cpp
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/partition/initial_partitioning/: initial_partitioner.cpp
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/partition/uncoarsening/refinement/cycle_improvements/: advanced_models.cpp  augmented_Qgraph.cpp  problem_factory.h
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/partition/uncoarsening/refinement/kway_graph_refinement/: kway_graph_refinement.cpp  kway_graph_refinement_commons.h
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/partition/uncoarsening/refinement/kway_motif_cond_refinement/: kway_motif_cond_refinement.h
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/partition/uncoarsening/refinement/label_propagation_refinement/: label_propagation_refinement.cpp  label_propagation_refinement.h
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/partition/uncoarsening/refinement/node_separators/: localized_fm_ns_local_search.cpp
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/partition/uncoarsening/refinement/quotient_graph_refinement/: boundary_lookup.h  quotient_graph_refinement.h
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/partition/uncoarsening/refinement/quotient_graph_refinement/flow_refinement/: two_way_flow_refinement.cpp
experimental_data/Local Motif Clustering via (Hyper)Graph Partitioning/full_algorithms/lib/tools/: graph_communication.h
experiments/: README
experiments/sample_experiments/: extract_param.sh  folders.txt
experiments/seednodes/: com-dblp.seed
full_algorithms/: README.md  build_all.sh  clean_all.sh
full_algorithms/app/: .configuration.h.swp  .parse_parameters.h.swp  motif_clustering.cpp  motif_clustering_graph_parallel.cpp  motif_clustering_parallel.cpp
full_plotting/: README.md  plot.sh
full_plotting/meta_scripts/: impr_plotscript.gnuplot  plotscript_res.gnuplot  pp_plotscript_res.gnuplot  pp_plotscript_tim.gnuplot  ratio_plotscript.gnuplot
full_plotting/queries/: mean_per_graph_geo.sql  ordered_normalized_values.sql
full_results/mappr/: results.txt
misc/: mt-kahypar_compile.sh
(+410 files in other folders)
